--- a/C2Dapp/C2Dapp/main.storyboard
+++ b/C2Dapp/C2Dapp/main.storyboard
@@ -129,7 +129,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="GfN-yz-UIW" kind="push" identifier="shopViewSegue" id="wkk-BS-cQz"/>
+                                    <segue destination="GfN-yz-UIW" kind="push" identifier="hViewSegue" id="wkk-BS-cQz"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ujV-6Y-CFe">
@@ -144,7 +144,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Icu-Nw-IdD" kind="push" identifier="shopViewSegue" id="nZZ-BS-aoE"/>
+                                    <segue destination="Icu-Nw-IdD" kind="push" identifier="bViewSegue" id="nZZ-BS-aoE"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fuV-NL-EGh">
@@ -158,7 +158,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="DMp-zP-aOl" kind="push" identifier="shopViewSegue" id="PmB-RX-6QQ"/>
+                                    <segue destination="DMp-zP-aOl" kind="push" identifier="nViewSegue" id="PmB-RX-6QQ"/>
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="hereforbeer.io" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w9S-zj-ixJ">
